--- a/webkreative/assets/styles/tags.scss
+++ b/webkreative/assets/styles/tags.scss
@@ -1,3 +1,11 @@
+$green: #00FF80;
+$flashyGreen: #00FF40;
+$corail: #E9967A;
+$velvetViolet: #800080;
+$pacificPink: #DB7093;
+$harborBlue: #00656f;
+$poppySeed: #626367;
+
 /* ---- BEGIN Language specific---- */
 
 .symfony {
@@ -10,8 +18,25 @@
     color: black;
 }
 
+.wordpress {
+    background-color: $harborBlue;
+}
+
   /* ---- END Language specific ---- */
 
 /* ---- Begin Tag specific ---- */
-
+.build {
+    background-color: $flashyGreen;
+    color: black;
+}
+.maintenance {
+    background-color: $corail;
+    color: black;
+}
+.webdesign {
+    background-color: $pacificPink;
+}
+.design {
+    background-color: $velvetViolet;
+}
 /* ---- END Tag specific ---- */
